--- a/addtask/templates/tasks/edittask.html
+++ b/addtask/templates/tasks/edittask.html
@@ -18,7 +18,7 @@
                     <div class="card">
                         <div class="card-body">
                             <!-- end page title -->
-                            <form method="POST" action="{% url 'tasklist'%}">
+                            <form method="POST">
                                 {% csrf_token %}
                                 {{form|crispy}}
                                 <div class="row">
