--- a/addtask/templates/tasks/pendingtask.html
+++ b/addtask/templates/tasks/pendingtask.html
@@ -1,7 +1,7 @@
-{% extends 'base.html '%}
+{%extends 'base.html'%}
 {% load static %}
 {% load render_table from django_tables2 %}
-{% block content%}
+{% block content %}
 <div class="main-content">
 
     <div class="page-content">
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="page-title-box d-flex align-items-center justify-content-between">
-                        <h4 class="mb-0">Task History</h4>
+                        <h4 class="mb-0">Pending Task</h4>
 
                     </div>
                 </div>
@@ -40,5 +40,4 @@
     <!-- End Page-content -->
 
 </div>
-<!-- END layout-wrapper -->
 {% endblock %}
