--- a/todoapp/templates/base.html
+++ b/todoapp/templates/base.html
@@ -12,10 +12,11 @@
         <meta content="Themesbrand" name="author" />
         <!-- App favicon -->
         <link rel="shortcut icon" href="{% static 'assets/images/favicon.ico'%}">
-     
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap Css -->
         <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}">
-
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/maincss.css' %}">
+        
         <link href="{% static 'assets/css/bootstrap.min.css'%}" id="bootstrap-style" rel="stylesheet" type="text/css" />
         <!-- Icons Css -->
         <link href="{% static 'assets/css/icons.min.css'%}" rel="stylesheet" type="text/css" />
@@ -33,13 +34,12 @@
     
             <!-- Begin page -->
             <div id="layout-wrapper">
-     
                 <header id="page-topbar">
                     <div class="navbar-header">
                         <div class="d-flex">
                             <!-- LOGO -->
                             <div class="navbar-brand-box">
-                                <a href="index.html" class="logo logo-dark">
+                                <a href="{% url 'tasklist'%}" class="logo logo-dark">
                                     <span class="logo-sm">
                                         <img src="{% static 'assets/images/logo-sm.png'%}" alt="" height="22">
                                     </span>
@@ -48,7 +48,7 @@
                                     </span>
                                 </a>
     
-                                <a href="index.html" class="logo logo-light">
+                                <a href="{% url 'tasklist'%}" class="logo logo-light">
                                     <span class="logo-sm">
                                         <img src="{% static 'assets/images/logo-sm.png'%}" alt="" height="22">
                                     </span>
@@ -93,36 +93,7 @@
                                     </form>
                                 </div>
                             </div>
-    
-                            <div class="dropdown d-inline-block language-switch">
-                                <button type="button" class="btn header-item waves-effect"
-                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img src="{% static 'assets/images/flags/us.jpg'%}" alt="Header Language" height="16">
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-end">
-                        
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="{% static 'assets/images/flags/spain.jpg'%}" alt="user-image" class="me-1" height="12"> <span class="align-middle">Spanish</span>
-                                    </a>
-    
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="{% static 'assets/images/flags/germany.jpg'%}" alt="user-image" class="me-1" height="12"> <span class="align-middle">German</span>
-                                    </a>
-    
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="{% static 'assets/images/flags/italy.jpg'%}" alt="user-image" class="me-1" height="12"> <span class="align-middle">Italian</span>
-                                    </a>
-    
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="{% static 'assets/images/flags/russia.jpg'%}" alt="user-image" class="me-1" height="12"> <span class="align-middle">Russian</span>
-                                    </a>
-                                </div>
-                            </div>
-    
+
                             <div class="dropdown d-none d-lg-inline-block ms-1">
                                 <button type="button" class="btn header-item noti-icon waves-effect"
                                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -184,7 +155,7 @@
                             <div class="dropdown d-inline-block">
                                 <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-notifications-dropdown"
                                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="uil-bell"></i>
+                                    <i class="bell fa fa-bell"></i>
                                     <span class="badge bg-danger rounded-pill">3</span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0"
@@ -280,7 +251,7 @@
                                     <a class="dropdown-item" href="#"><i class="uil uil-wallet font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">My Wallet</span></a>
                                     <a class="dropdown-item d-block" href="#"><i class="uil uil-cog font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Settings</span> <span class="badge bg-soft-success rounded-pill mt-1 ms-2">03</span></a>
                                     <a class="dropdown-item" href="{% url 'login'%}"><i class="uil uil-lock-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Log In</span></a>
-                                    <a class="dropdown-item" href="{% url 'login' %}"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Sign out</span></a>
+                                    <a class="dropdown-item" href="{% url 'logout' %}"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Sign out</span></a>
                                 </div>
                             </div>
     
@@ -298,7 +269,7 @@
     
                     <!-- LOGO -->
                     <div class="navbar-brand-box">
-                        <a href="index.html" class="logo logo-dark">
+                        <a href="{% url 'tasklist'%}" class="logo logo-dark">
                             <span class="logo-sm">
                                 <img src="{% static 'assets/images/logo-sm.png'%}" alt="" height="22">
                             </span>
@@ -307,7 +278,7 @@
                             </span>
                         </a>
     
-                        <a href="index.html" class="logo logo-light">
+                        <a href="{% url 'tasklist'%}" class="logo logo-light">
                             <span class="logo-sm">
                                 <img src="{% static 'assets/images/logo-sm.png'%}" alt="" height="22">
                             </span>
@@ -316,14 +287,15 @@
                             </span>
                         </a>
                     </div>
-    
-                    <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect vertical-menu-btn">
+                    
+                    <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect vertical-menu-btn" href="#collapseExample" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapseExample">
                         <i class="fa fa-fw fa-bars"></i>
                     </button>
     
                     <div data-simplebar class="sidebar-menu-scroll">
-    
+                        
                         <!--- Sidemenu -->
+                        
                         <div id="sidebar-menu">
                             <!-- Left Menu Start -->
                             <ul class="metismenu list-unstyled" id="side-menu">
@@ -339,23 +311,37 @@
                                 </li> -->
     
                                 <li>
-                                    <a href="{% url 'tasklist'%}">
-                                        <i class="fa fa-sun-o"></i>
+                                    <a href="{% url 'tasklist' %}">
+                                        <i class="far fa-tasks-alt"></i>
                                         <span>My Task</span>
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="{% url 'taskhistory'%}">
+                                    <a href="{% url 'taskhistory' %}">
                                         <i class="fa fa-history"></i>
                                         <span>Task History</span> 
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="{% url 'complete' %}">
+                                        <i class="fas fa-list-ul"></i>
+                                        <span>My Complete Task</span> 
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'pending' %}">
+                                        <i class="fas fa-tasks"></i>
+                                        <span>My Pending Task</span> 
+                                    </a>
+                                </li>
                             </ul>
+                        </div>
                         </div>
                         <!-- Sidebar -->
                     </div>
                 </div>
+            </div>
                 <!-- Left Sidebar End -->
                 {% block content %}
                 {% endblock %}
@@ -445,7 +431,18 @@
     <script src="{% static 'assets/libs/node-waves/waves.min.js' %}"></script>
     <script src="{% static 'assets/libs/waypoints/lib/jquery.waypoints.min.js' %}"></script>
     <script src="{% static 'assets/libs/jquery.counterup/jquery.counterup.min.js'%}"></script>
-
+    
+<script>
+    function openNav() {
+      document.getElementById("mySidebar").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+    }
+    
+    function closeNav() {
+      document.getElementById("mySidebar").style.width = "0";
+      document.getElementById("main").style.marginLeft= "0";
+    }
+    </script>
     <!-- apexcharts -->
     <!-- <script src="{% static 'assets/libs/apexcharts/apexcharts.min.js'%}"></script>
 
