--- a/todoapp/templates/delete_icon.html
+++ b/todoapp/templates/delete_icon.html
@@ -1,3 +1,4 @@
-<a href="{% url 'deletedata' record.pk%}">
+<a href="{% url 'task-delete' record.pk%}">
     <span class="fas fa-trash-alt"></span>
 </a>
+ 
