--- a/todoapp/templates/tasklist.html
+++ b/todoapp/templates/tasklist.html
@@ -24,24 +24,37 @@
                         <a href="{% url 'addtask'%}">
                         <button type="button" class="btn btn-success waves-effect waves-light mb-3"><i
                                 class="mdi mdi-plus me-1"></i> Add Task</button>
-                        </a>     
+                        </a> 
+                        <a href="{% url 'csvfile'%}">
+                            <button type="button" class="btn btn-success waves-effect waves-light mb-3"><i
+                                    class="mdi mdi-plus me-1"></i>Export CSV</button>
+                            </a>      
                     </div>
+                    
                 </div>
+
                 <div class="col-md-8">
                     <div class="float-end">
                         <div class=" mb-3">
-                            <div class="input-daterange input-group" id="datepicker6" data-date-format="dd M, yyyy"
+                            <!-- <div class="input-daterange input-group" id="datepicker6" data-date-format="dd M, yyyy"
                                 data-date-autoclose="true" data-provide="datepicker" data-date-container='#datepicker6'>
                                 <input type="text" class="form-control text-start" placeholder="From" name="From" />
                                 <input type="text" class="form-control text-start" placeholder="To" name="To" />
 
                                 <button type="button" class="btn btn-primary"><i
                                         class="mdi mdi-filter-variant"></i></button>
-                            </div>
+                            </div> -->
+                            {% if filter_data %}
+                            <form action="" method="GET" class='form form-inline'>
+                                {{filter_data.form}}
+                                <button type="submit" class="btn btn-primary">Filter</button>
+                                </form>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
-            </div>
+
+        </div>
 
             <div class="row">
                 <div class="col-lg-12">
@@ -49,11 +62,9 @@
                     <div class="table-responsive mb-4">
                         <table class="table table-centered datatable dt-responsive nowrap table-card-list"
                             style="border-collapse: collapse; border-spacing: 0 12px; width: 100%;">
-                          
                             <tbody>
-                                {{ filter.filter_data}}
                                 {% render_table table_data %}
-    
+
                             </tbody>
                         </table>
                         
